@@ -13,6 +13,11 @@
 
 #include <objc/objc-api.h>
 
+//S: Tools for analysis.
+
+//D: This class allows the user to easily histogram data generated by a
+//D: collection of objects. In addition the class will generate some
+//D: standard statistics over the resulting dataset.
 @implementation EZBin
 
 + createBegin: aZone
@@ -29,8 +34,9 @@
 }
 
 //M: The setGraphics method sets the state of the display. Set the state to 0 
-//M: if a graphical display of the graph is not required. The default state is 1
-//M: meaning that by default the data appears graphically in a window. 
+//M: if a graphical display of the graph is not required. 
+//M: The default state is 1 meaning that by default the data appears
+//M: graphically in a window. 
 - setGraphics: (int)state
 {
   graphics = state;
@@ -39,7 +45,7 @@
 
 //M: The setFileOutput method sets the state of file I/O.  Set the state to 1 
 //M: if data for the sequences is to be sent to a file.  The default state is 0
-//M: meaning that by default no file I/O is carried out by the EZBIN class.
+//M: meaning that by default no file I/O is carried out by the EZBin class.
 - setFileOutput: (int)state
 {
   fileOutput = state;
@@ -47,7 +53,7 @@
 }
 
 //M: The setTitle method uses a title string to label a graph window in the 
-//M: graphical version of EZBIN.  The label appears at the top of the graph 
+//M: graphical version of EZBin.  The label appears at the top of the graph 
 //M: window. (Only relevant if the state of setGraphics is set to 1.)
 - setTitle: (const char *)aTitle
 {
@@ -56,7 +62,7 @@
 }
 
 //M: The setAxisLabels:X:Y method sets the horizontal and vertical labels on 
-//M: the histogram in the graphical version of EZBIN. (Only relevant if the 
+//M: the histogram in the graphical version of EZBin. (Only relevant if the 
 //M: state of setGraphics is set to 1.)
 - setAxisLabelsX: (const char *)xl Y: (const char *)yl
 {
@@ -114,10 +120,10 @@
   if (binNum <= 0)
     [InvalidCombination raiseEvent: "EZBin without a positive Bin Number!!!\n"];
 
-  if(!theTitle)
+  if (!theTitle)
     [InvalidCombination raiseEvent: "EZBin without a title!!!\n"]; 
 
-  if(min >= max)
+  if (min >= max)
     [InvalidCombination raiseEvent: "EZBin with invalid min-max range!!!\n"]; 
 
   [super createEnd];
